test/benchmark/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: benchmark-test-server-1
  namespace: nighthawk-test-server
spec:
  parentRefs:
    - name: benchmark
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nighthawk-test-server
          namespace: nighthawk-test-server
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
