test/benchmark/prometheus.yaml
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: prometheus
#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRole
#metadata:
#  name: prometheus
#rules:
#- apiGroups: [""]
#  resources:
#  - nodes
#  - nodes/metrics
#  - services
#  - endpoints
#  - pods
#  verbs: ["get", "list", "watch"]
#- apiGroups: [""]
#  resources:
#  - configmaps
#  verbs: ["get"]
#- apiGroups:
#  - networking.k8s.io
#  resources:
#  - ingresses
#  verbs: ["get", "list", "watch"]
#- nonResourceURLs: ["/metrics"]
#  verbs: ["get"]
#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRoleBinding
#metadata:
#  name: prometheus
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: ClusterRole
#  name: prometheus
#subjects:
#- kind: ServiceAccount
#  name: prometheus
#  namespace: default
#---
# Prometheus ServiceMonitor Object to monitor EG control plane metrics
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  name: eg-control-plane
  #namespace: envoy-gateway-system
  labels:
    team: benchmark
spec:
  selector:
    matchLabels:
      control-plane: envoy-gateway
  endpoints:
  - port: grpc
  namespaceSelector:
    any: true
---
# Prometheus ServiceMonitor Object to monitor EG data plane metrics
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  name: eg-dateplane
  #namespace: envoy-gateway-system
  labels:
    team: benchmark
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: proxy
  endpoints:
  - port: envoy-http-e0603c49
  namespaceSelector:
    any: true
# Prometheus ServiceMonitor Object to monitor test server metrics
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  name: benchmark
  #namespace: nighthawk-test-server
  labels:
    team: benchmark
spec:
  selector:
    matchLabels:
      app: nighthawk-test-server
  endpoints:
  - port: http
  namespaceSelector:
    any: true
---
apiVersion: monitoring.coreos.com/v1
kind: Prometheus
metadata:
  name: prometheus
spec:
  #serviceAccountName: prometheus
  serviceMonitorSelector:
    matchLabels:
      team: benchmark
  resources:
    requests:
      memory: 400Mi
  enableAdminAPI: false
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: LoadBalancer
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: prometheus
